# component-engine

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
component-engine/: __init__.py  component.py  component_properties.py  hook.py  properties.py
core/: CMakeLists.txt
core/headers/: argument_parser.hpp
core/headers/python/: object.hpp
core/sources/: argument_parser.cpp
core/sources/python/: object.cpp
examples/: CMakeLists.txt
examples/simple-example/: CMakeLists.txt
examples/simple-example/sources/: main.cpp
